# hftbacktest

./: BYBIT_FETCH_TRADES.md  CONNECTOR_RUNNER_IMPLEMENTATION.md  IMPLEMENTATION_NOTES_BYBIT.md  IMPLEMENTATION_SUMMARY.md  README.rst  t = True
docs/: bybit_fetch_trades.rst  index.rst  python_connector_setup.md  python_live_connector_example.rst
examples/: README_PYTHON_LIVE_CONNECTOR.md  bybit_fetch_trades.py  connector_runner_example.py  live_trading_example.py  python_live_connector.py  validate_documentation.py  verify_live_setup.py
py-hftbacktest/: BUILD_LIVE.md  Cargo.toml  LIVE_FEATURE_SUMMARY.md  VERIFY_IMPLEMENTATION.md  pyproject.toml
py-hftbacktest/hftbacktest/: __init__.py
py-hftbacktest/hftbacktest/bybit/: README.md  __init__.py
py-hftbacktest/hftbacktest/live/: CONNECTOR_RUNNER.md  README.md  __init__.py  client.py  connector_runner.py  example.py  models.py  stub.py
py-hftbacktest/src/: bybit.rs  lib.rs
py-hftbacktest/tests/: test_bybit_fetch_trades.py  test_bybit_module.py  test_connector_runner.py  test_live_client.py  test_python_live_connector_example.py
