[package]
name = "py-hftbacktest"
version = "2.4.3"
edition = "2024"

[lib]
name = "hftbacktest"
crate-type = ["cdylib"]

[features]
default = []
live = ["hftbacktest/live"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
hftbacktest = { path = "../hftbacktest", default-features = false, features = ["backtest", "s3"] }
hftbacktest-derive = { path = "../hftbacktest-derive" }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
chrono = { version = "0.4.42" }
hmac = "0.12.1"
sha2 = "0.10.9"